<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/payment_header"
        style="@style/ParkeerAssistent.Header"
        android:text="@string/payment_header"
        android:layout_marginTop="@dimen/vertical_margin" />

    <ProgressBar
        android:id="@+id/loading"
        style="@style/ParkeerAssistent.Loading"
        android:layout_marginTop="@dimen/vertical_margin_xlarge" />

    <LinearLayout
        android:id="@+id/payment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            style="@style/ParkeerAssistent.Group"
            android:orientation="vertical" >

            <TextView
                style="@style/ParkeerAssistent.Text"
                android:text="@string/payment_recipientMsg"
                android:textColor="@color/danger"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            style="@style/ParkeerAssistent.Group"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_amount"
                    style="@style/ParkeerAssistent.Label"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_marginTop="@dimen/zero"
                    android:layout_marginBottom="@dimen/zero"
                    android:layout_gravity="center_vertical"
                    android:text="@string/payment_amount" />

                <Spinner
                    android:id="@+id/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_marginTop="@dimen/zero"
                    android:layout_marginBottom="@dimen/zero"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:layout_marginBottom="@dimen/vertical_margin_small"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_bank"
                    style="@style/ParkeerAssistent.Label"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_marginTop="@dimen/zero"
                    android:layout_marginBottom="@dimen/zero"
                    android:layout_gravity="center_vertical"
                    android:text="@string/payment_bank" />

                <Spinner
                    android:id="@+id/bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_marginTop="@dimen/zero"
                    android:layout_marginBottom="@dimen/zero"
                    android:layout_gravity="center_vertical"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/payment_start"
            style="@style/ParkeerAssistent.Button.Success" />

    </LinearLayout>

</LinearLayout>